mp1/compiler_errors.txt
compilation of version 14 failed with:
mkdir -p obj
cc -g -Wall -Wextra -Wno-sign-compare -c -o obj/http_server.o src/http_server.c
src/http_server.c: In function ‘sigchld_handler’:
src/http_server.c:33:26: warning: unused parameter ‘s’ [-Wunused-parameter]
 void sigchld_handler(int s)
                          ^
src/http_server.c: In function ‘main’:
src/http_server.c:136:4: error: ‘buf’ undeclared (first use in this function)
    buf[numbytes] = '\0';
    ^
src/http_server.c:136:4: note: each undeclared identifier is reported only once for each function it appears in
src/http_server.c:136:8: error: ‘numbytes’ undeclared (first use in this function)
    buf[numbytes] = '\0';
        ^
src/http_server.c:210:6: error: expected ‘;’ before ‘fseek’
      fseek(pfile,0,SEEK_END);//located the END position
      ^
src/http_server.c:222:16: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘size_t {aka long unsigned int}’ [-Wformat=]
         printf("numof bytes sent:%d\n",strlen(line));
                ^
src/http_server.c:189:8: warning: unused variable ‘numsent’ [-Wunused-variable]
    int numsent;
        ^
src/http_server.c:58:6: warning: variable ‘recvsize’ set but not used [-Wunused-but-set-variable]
  int recvsize;
      ^
Makefile:66: recipe for target 'obj/http_server.o' failed
make: *** [obj/http_server.o] Error 1
 

